test mobile form overflow fix

--- a/components/App/AppLayout/AppLayout.module.scss
+++ b/components/App/AppLayout/AppLayout.module.scss
@@ -4,6 +4,7 @@
 	position: relative;
 	font-size: 1.4rem;
 	max-width: 100%;
+	height: 100%;
 	min-height: 100vh;
 	display: flex;
 	flex-direction: column;
