--- a/components/App/Create/CreateModal.module.scss
+++ b/components/App/Create/CreateModal.module.scss
@@ -9,11 +9,6 @@
 	margin: 0 auto;
 	@include panel;
 	overflow: auto;
-
-	@include respondH(400) {
-		margin-left: -1.6rem;
-		margin-right: -1.6rem;
-	}
 }
 
 .form_body {
@@ -32,7 +27,7 @@
 	justify-content: center;
 	align-items: center;
 	position: fixed;
-	padding: 1.6rem;
+	padding: 0 1.6rem;
 	top: 0;
 	left: 0;
 	min-height: 100%;
@@ -42,7 +37,7 @@
 	background-color: rgba(0, 0, 0, .5);
 
 	@include respondH(550) {
-		padding: .8rem;
+		padding: 0;
 	}
 
 	&_container {
@@ -54,7 +49,7 @@
 		overflow-y: auto;
 
 		@include respondH(550) {
-			padding: 1.6rem;
+			padding: 1.6rem .8rem;
 		}
 	}
 }
