--- a/styles/global.scss
+++ b/styles/global.scss
@@ -99,7 +99,7 @@ body.dark {
 	--hover-color-light: var(--gray400);
 	--hover-color-dark: var(--primary500);
 
-	--box-shadow: 0px 1px 2px 0px hsla(167, 5%, 40%, 40%);
+	--box-shadow: 0px 1px 2px 0px hsla(167, 5%, 60%, 40%);
 
 	color: var(--white);
 }
